--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,336 +1,343 @@
-:root{
-	--mainColor:#eaeaea;
-	--secondaryColor:#fff;
+:root {
+  --mainColor: #eaeaea;
+  --secondaryColor: #fff;
 
-	--borderColor:#c1c1c1;
+  --borderColor: #c1c1c1;
 
-	--mainText:black;
-	--secondaryText:#4b5156;
+  --mainText: black;
+  --secondaryText: #4b5156;
 
-	--themeDotBorder:#24292e;
+  --themeDotBorder: #24292e;
 
-	--previewBg:rgb(251, 249, 243, 0.8);
-	--previewShadow:#f0ead6;
+  --previewBg: rgb(251, 249, 243, 0.8);
+  --previewShadow: #f0ead6;
 
-
-	--buttonColor:black;
+  --buttonColor: black;
 }
 
-
-html, body{
-	padding: 0;
-	margin: 0;
-	scroll-behavior: smooth;
+html,
+body {
+  padding: 0;
+  margin: 0;
+  scroll-behavior: smooth;
 }
 
-body *{
-	transition: 0.3s;
+body * {
+  transition: 0.3s;
 }
 
-
-h1, h2, h3, h4, h5, h6, strong{
-	color: var(--mainText);
-	font-family: 'Russo One', sans-serif;
-	font-weight: 500;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+strong {
+  color: var(--mainText);
+  font-family: "Russo One", sans-serif;
+  font-weight: 500;
 }
 
-p, li, span, label, input, textarea{
-	color: var(--secondaryText);
-	font-family: 'Roboto Mono', monospace;
+p,
+li,
+span,
+label,
+input,
+textarea {
+  color: var(--secondaryText);
+  font-family: "Roboto Mono", monospace;
 }
 
-a{
-	text-decoration: none;
-	color:#17a2b8;
+a {
+  text-decoration: none;
+  color: #17a2b8;
 }
 
-ul{
-	list-style: none;
+ul {
+  list-style: none;
 }
 
-h1 { font-size: 56px;}
-h2 { font-size: 36px;}
-h3 { font-size: 28px;}
-h4 { font-size: 24px;}
-h5 { font-size: 20px;}
-h6 { font-size: 16px;}
-
-
-.s1{
-	background-color: var(--mainColor);
-	border-bottom:1px solid var(--borderColor);
-	overflow:auto;
+h1 {
+  font-size: 56px;
+}
+h2 {
+  font-size: 36px;
+}
+h3 {
+  font-size: 28px;
+}
+h4 {
+  font-size: 24px;
+}
+h5 {
+  font-size: 20px;
+}
+h6 {
+  font-size: 16px;
 }
 
-.s2{
-	background-color: var(--secondaryColor);
-	border-bottom:1px solid var(--borderColor);
-	overflow:auto;
+.s1 {
+  background-color: var(--mainColor);
+  border-bottom: 1px solid var(--borderColor);
+  overflow: auto;
 }
 
-
-
-
-.main-container{
-	width: 1200px;
-	margin: 0 auto;
+.s2 {
+  background-color: var(--secondaryColor);
+  border-bottom: 1px solid var(--borderColor);
+  overflow: auto;
 }
 
-
-.greeting-wrapper{
-	display: grid;
-	text-align: center;
-	align-content: center;
-	min-height: 10em;
-
+.main-container {
+  width: 1200px;
+  margin: 0 auto;
 }
 
-.intro-wrapper{
-	background-color: var(--secondaryColor);
-	border:1px solid var(--borderColor);
-	border-radius:5px 5px 0 0;
-
-
-	-webkit-box-shadow: -1px 1px 3px -1px rgba(0,0,0,0.75);
-	-moz-box-shadow: -1px 1px 3px -1px rgba(0,0,0,0.75);
-	box-shadow: -1px 1px 3px -1px rgba(0,0,0,0.75);
-
-	display: grid;
-	grid-template-columns: 1fr 1fr;
-	grid-template-areas: 
-		'nav-wrapper nav-wrapper'
-		'left-column right-column'
-	;
+.greeting-wrapper {
+  display: grid;
+  text-align: center;
+  align-content: center;
+  min-height: 10em;
 }
 
-.nav-wrapper{
-	border-radius:5px 5px 0 0;
-	grid-area:nav-wrapper;
-	border-bottom: 1px solid var(--borderColor);
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	background-color: var(--mainColor);
+.intro-wrapper {
+  background-color: var(--secondaryColor);
+  border: 1px solid var(--borderColor);
+  border-radius: 5px 5px 0 0;
+
+  -webkit-box-shadow: -1px 1px 3px -1px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: -1px 1px 3px -1px rgba(0, 0, 0, 0.75);
+  box-shadow: -1px 1px 3px -1px rgba(0, 0, 0, 0.75);
+
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-areas:
+    "nav-wrapper nav-wrapper"
+    "left-column right-column";
 }
 
-#navigation a{
-	color:var(--mainText);
+.nav-wrapper {
+  border-radius: 5px 5px 0 0;
+  grid-area: nav-wrapper;
+  border-bottom: 1px solid var(--borderColor);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: var(--mainColor);
 }
 
-#navigation{
-	margin:0;
-	padding: 10px;
+#navigation a {
+  color: var(--mainText);
 }
 
-.nav-wrapper ul#navigation:hover{
-	background-color: #FC6058;
-	border-radius: 3px;
+#navigation {
+  margin: 0;
+  padding: 10px;
 }
 
-#navigation li{
-	display: flex;
-	margin-right: 5px;
-	margin-left:5px;
+.nav-wrapper ul#navigation:hover {
+  background-color: #fc6058;
+  border-radius: 3px;
 }
 
-.dots-wrapper{
-	display: flex;
-	padding: 10px;
+#navigation li {
+  display: flex;
+  margin-right: 5px;
+  margin-left: 5px;
 }
 
-#dot-1{
-	background-color:  #FC6058;
+.dots-wrapper {
+  display: flex;
+  padding: 10px;
 }
 
-#dot-2{
-	background-color:  #FEC02F;
+#dot-1 {
+  background-color: #fc6058;
 }
 
-#dot-3{
-	background-color:  #2ACA3E;
+#dot-2 {
+  background-color: #fec02f;
 }
 
-.browser-dot{
-	background-color: black;
-	height: 15px;
-	width: 15px;
-	border-radius: 50%;
-	margin: 5px;
-
-	-webkit-box-shadow: -1px 1px 3px -1px rgba(0,0,0,0.75);
-	-moz-box-shadow: -1px 1px 3px -1px rgba(0,0,0,0.75);
-	box-shadow: -1px 1px 3px -1px rgba(0,0,0,0.75);
-
+#dot-3 {
+  background-color: #2aca3e;
 }
 
+.browser-dot {
+  background-color: black;
+  height: 15px;
+  width: 15px;
+  border-radius: 50%;
+  margin: 5px;
 
-.left-column{
-	grid-area: left-column;
-	padding-top:50px;
-	padding-bottom: 50px;
+  -webkit-box-shadow: -1px 1px 3px -1px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: -1px 1px 3px -1px rgba(0, 0, 0, 0.75);
+  box-shadow: -1px 1px 3px -1px rgba(0, 0, 0, 0.75);
 }
 
-#profile_pic{
-	display: block;
-	margin:0 auto;
-
-	height: 200px;
-	width: 200px;
-	object-fit: cover;
-	border:2px solid var(--borderColor);
+.left-column {
+  grid-area: left-column;
+  padding-top: 50px;
+  padding-bottom: 50px;
 }
 
+#profile_pic {
+  display: block;
+  margin: 0 auto;
 
-#theme-options-wrapper{
-	display: flex;
-	justify-content: center;
+  height: 200px;
+  width: 200px;
+  object-fit: cover;
+  border: 2px solid var(--borderColor);
 }
 
-.theme-dot{
-	height: 30px;
-	width: 30px;
-	background-color: black;
-	/* border-radius: 50%; */
-
-	margin: 5px;
-	border:2px solid var(--themeDotBorder);
-	/* -webkit-box-shadow: -1px 1px 3px -1px rgba(0,0,0,0.75); */
-	/* -moz-box-shadow: -1px 1px 3px -1px rgba(0,0,0,0.75); */
-	box-shadow: -1px 1px 3px -1px rgba(0,0,0,0.75);
-
-	cursor: pointer;
+#theme-options-wrapper {
+  display: flex;
+  justify-content: center;
 }
 
+.theme-dot {
+  height: 30px;
+  width: 30px;
+  background-color: black;
+  /* border-radius: 50%; */
 
-.theme-dot:hover{
-	transform: scale(1.2);
+  margin: 5px;
+  border: 2px solid var(--themeDotBorder);
+  /* -webkit-box-shadow: -1px 1px 3px -1px rgba(0,0,0,0.75); */
+  /* -moz-box-shadow: -1px 1px 3px -1px rgba(0,0,0,0.75); */
+  box-shadow: -1px 1px 3px -1px rgba(0, 0, 0, 0.75);
+
+  cursor: pointer;
 }
 
-#light-mode{
-	background-color: #fff;
+.theme-dot:hover {
+  transform: scale(1.2);
 }
 
-#blue-mode{
-	background-color: #192734;
+#light-mode {
+  background-color: #fff;
 }
 
-#green-mode{
-	background-color: #78866b;
+#blue-mode {
+  background-color: #192734;
 }
 
-#purple-mode{
-	background-color: #7E4C74;
+#green-mode {
+  background-color: #78866b;
 }
 
-#settings-note{
-	font-size: 12px;
-	font-style: italic;
-	text-align: center;
+#purple-mode {
+  background-color: #7e4c74;
 }
 
-.right-column{
-	grid-area: right-column;
-	display: grid;
-	align-content: center;
-
-	padding-top: 50px;
-	padding-bottom: 50px;
+#settings-note {
+  font-size: 12px;
+  font-style: italic;
+  text-align: center;
 }
 
+.right-column {
+  grid-area: right-column;
+  display: grid;
+  align-content: center;
 
-#preview-shadow{
-	background-color: var(--previewShadow);
-	max-width: 300px;
-	height: 180px;
-	padding-left: 30px;
-	padding-top: 30px;
+  padding-top: 50px;
+  padding-bottom: 50px;
 }
 
-#preview{
-	width: 300px;
-	border:1.5px solid #17a2b8;
-	background-color: var(--previewBg);
-	padding:15px;
-	position: relative;
+#preview-shadow {
+  background-color: var(--previewShadow);
+  max-width: 300px;
+  height: 180px;
+  padding-left: 30px;
+  padding-top: 30px;
 }
 
-.corner{
-	width:7px;
-	height: 7px;
-	border-radius: 50%;
-	border:1.5px solid #17a2b8;
-	background-color: #fff;
-	position: absolute;
+#preview {
+  width: 300px;
+  border: 1.5px solid #17a2b8;
+  background-color: var(--previewBg);
+  padding: 15px;
+  position: relative;
 }
 
-#corner-tl{
-	top:-5px;
-	left: -5px
+.corner {
+  width: 7px;
+  height: 7px;
+  border-radius: 50%;
+  border: 1.5px solid #17a2b8;
+  background-color: #fff;
+  position: absolute;
 }
 
-#corner-tr{
-	top:-5px;
-	right: -5px
+#corner-tl {
+  top: -5px;
+  left: -5px;
 }
 
-
-#corner-br{
-	bottom:-5px;
-	right: -5px
+#corner-tr {
+  top: -5px;
+  right: -5px;
 }
 
-
-#corner-bl{
-	bottom:-5px;
-	left: -5px
+#corner-br {
+  bottom: -5px;
+  right: -5px;
 }
 
-.about-wrapper{
-	display: grid;
-	grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
-	padding-bottom: 50px;
-	padding-top: 50px;
-	gap:100px;
+#corner-bl {
+  bottom: -5px;
+  left: -5px;
 }
 
-#skills{
-	display: flex;
-	justify-content: space-around;
-	align-items: center;
-	flex-wrap: nowrap;
-	background-color: var(--previewShadow);
-	color: var(--secondaryText);
-	font-family: 'Ubuntu', sans-serif;
-    margin-bottom: 20px;
-	height: 150px;
-    font-weight: bold;
-	border: 2px solid;
+.about-wrapper {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+  padding-bottom: 50px;
+  padding-top: 50px;
+  gap: 100px;
 }
 
-.btn-btn{
-    display: flex;
-    align-items: center;
-    justify-content: center;
+#skills {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: nowrap;
+  background-color: var(--previewShadow);
+  color: var(--secondaryText);
+  font-family: "Ubuntu", sans-serif;
+  margin-bottom: 20px;
+  height: 150px;
+  font-weight: bold;
+  border: 2px solid;
 }
 
-#btn{
-    height: 3em;
-    width: 30%;
-    border-radius: 5px;
-    cursor: pointer;
-    border: none;
-    outline: none;
-    text-align: center;
-    font-family: 'Roboto Mono', monospace;
-    font-weight: bold;
-    font-size: 18px;
-    letter-spacing: 4px;
-    color: #eaeaea;
-    background-color: #4CAF50;
+.btn-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#btn {
+  height: 3em;
+  width: 30%;
+  border-radius: 5px;
+  cursor: pointer;
+  border: none;
+  outline: none;
+  text-align: center;
+  font-family: "Roboto Mono", monospace;
+  font-weight: bold;
+  font-size: 18px;
+  letter-spacing: 4px;
+  color: #eaeaea;
+  background-color: #4caf50;
 }
 
 #btn:hover {
-  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24),
+    0 17px 50px 0 rgba(0, 0, 0, 0.19);
 }
 
 /* .social-links{
@@ -339,144 +346,144 @@ h6 { font-size: 16px;}
 	text-align: center;
 } */
 
-#social_img{
-	width: 100%;
+#social_img {
+  width: 100%;
 }
 
-
-.post-wrapper{
-	display: grid;
-	grid-template-columns: repeat(auto-fit, 320px);
-	gap:20px;
-	justify-content: center;
-	padding-bottom: 50px;
+.post-wrapper {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, 320px);
+  gap: 20px;
+  justify-content: center;
+  padding-bottom: 50px;
 }
 
-.post{
-	border:1px solid var(--borderColor);
-	-webkit-box-shadow: -2px 7px 21px -9px rgba(0,0,0,0.75);
-	-moz-box-shadow: -2px 7px 21px -9px rgba(0,0,0,0.75);
-	box-shadow: -2px 7px 21px -9px rgba(0,0,0,0.75);
+.post {
+  border: 1px solid var(--borderColor);
+  -webkit-box-shadow: -2px 7px 21px -9px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: -2px 7px 21px -9px rgba(0, 0, 0, 0.75);
+  box-shadow: -2px 7px 21px -9px rgba(0, 0, 0, 0.75);
 }
 
-.thumbnail{
-	display: block;
-	width: 100%;
-	height:180px;
-	object-fit: cover;
+.thumbnail {
+  display: block;
+  width: 100%;
+  height: 180px;
+  object-fit: cover;
 }
 
-.post-preview{
-	background-color: #fff;
-	padding:15px;
+.post-preview {
+  background-color: #fff;
+  padding: 15px;
 }
 
-.post-title{
-	color:black;
-	margin: 0;
+.post-title {
+  color: black;
+  margin: 0;
 }
 
-.post-intro{
-	color:#4b5156;
-	font-size: 14px;
+.post-intro {
+  color: #4b5156;
+  font-size: 14px;
 }
 
-
-#contact-form{
-	display: block;
-	max-width: 600px;
-	margin: 0 auto;
-	border: 1px solid var(--borderColor);
-	padding: 15px;
-	border-radius: 5px;
-	background-color: var(--mainColor);
-	margin-bottom: 50px;
-
+#contact-form {
+  display: block;
+  max-width: 600px;
+  margin: 0 auto;
+  border: 1px solid var(--borderColor);
+  padding: 15px;
+  border-radius: 5px;
+  background-color: var(--mainColor);
+  margin-bottom: 50px;
 }
 
-#contact-form label{
-	line-height: 2.7em;
+#contact-form label {
+  line-height: 2.7em;
 }
 
-#contact-form textarea{
-	min-height: 100px;
-	font-size: 14px;
+#contact-form textarea {
+  min-height: 100px;
+  font-size: 14px;
 }
 
-
-.input-field{
-	width: 100%;
-	padding-top: 10px;
-	padding-bottom:10px; 
-	background-color: var(--secondaryColor);
-	border-radius: 5px;
-	border:1px solid var(--borderColor);
-	font-size: 14px;
+.input-field {
+  width: 100%;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  background-color: var(--secondaryColor);
+  border-radius: 5px;
+  border: 1px solid var(--borderColor);
+  font-size: 14px;
 }
 
-
-#submit-btn{
-	margin-top: 10px;
-	width: 100%;
-	padding-top: 10px;
-	padding-bottom:10px; 
-	color: #fff;
-	cursor: pointer;
-	background-color: var(--buttonColor);
-	border:none;
+#submit-btn {
+  margin-top: 10px;
+  width: 100%;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  color: #fff;
+  cursor: pointer;
+  background-color: var(--buttonColor);
+  border: none;
 }
 
-
-@media screen and (max-width: 1200px){
-	.main-container{
-		width: 95%;
-	}
+@media screen and (max-width: 1200px) {
+  .main-container {
+    width: 95%;
+  }
 }
 
-@media screen and (max-width: 800px){
-	.intro-wrapper{
-		grid-template-columns: 1fr;
-		grid-template-areas: 
-			'nav-wrapper'
-			'left-column'
-			'right-column'
-		;
-	}
+@media screen and (max-width: 800px) {
+  .intro-wrapper {
+    grid-template-columns: 1fr;
+    grid-template-areas:
+      "nav-wrapper"
+      "left-column"
+      "right-column";
+  }
 
-	.right-column{
-		justify-content: center;
-	}
-
+  .right-column {
+    justify-content: center;
+  }
 }
 
-@media screen and (max-width: 400px){
-	#preview-shadow{
-		max-width: 280px;
-		height: 180px;
-		padding-left: 10px;
-		padding-top: 10px;
-	}
+@media screen and (max-width: 400px) {
+  #preview-shadow {
+    max-width: 280px;
+    height: 180px;
+    padding-left: 10px;
+    padding-top: 10px;
+  }
 
-	#preview{
-		width: 280px;
-	}
+  #preview {
+    width: 280px;
+  }
 }
 
-li{
-	list-style-type: square;
+li {
+  list-style-type: square;
 }
 
-.foot{
-	display: flex;
-	justify-content: space-around;
-	flex-wrap: wrap;
-	padding: 30px;
+.foot {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  padding: 30px;
 }
 
-a{
-	font-family: 'Ubuntu', sans-serif;
+a {
+  font-family: "Ubuntu", sans-serif;
 }
 
+.skill-icon {
+  display: flex;
+  justify-content: center;
+}
 
-
-
+#foot-content {
+  color: tomato;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
